# distributed_pi

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  docker-compose.yml  k8s_deployment.yaml  k8s_deployment_final.yaml
html/: index.html  style.css
html/scripts/background/: background.js  bad_acid.frag  cubic_slide.frag  glitch_grid.frag  scrolling_lines.frag  sludge_drip.frag
hub/: .dockerignore  Cargo.toml  dockerfile
hub/src/: main.rs  pi_calc.rs
scripts/background/: grid_walk.frag  wavy_grid.frag
spoke/: Cargo.toml  dockerfile
spoke/src/: main.rs
src/: main.rs
