[package]
name = "distributed_pi_project_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = {version = "1.27.0", features = ["serde"]}
derive_more = { version = "1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
ciborium = "0.2.2"
gmp-mpfr-sys = {version="1.6.5", features=["use-system-libs"] }
actix-web = "4.10.2"
actix-cors = "0.7.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
