[package]
name = "distributed_pi_project_spoke"
version = "0.3.0"
edition = "2021"

[dependencies]
rug = {version = "1.27.0", features = ["serde"]}
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
gmp-mpfr-sys = {version="1.6.5" }
ciborium = "0.2.2"
